chore: mv source workspace > npm

--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "visor",
-  "version": "0.1.0",
-  "description": "Full-coverage `<head>` gear for Astro apps.",
-  "type": "module",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    },
-    "./components": "./components/index.ts"
-  },
+  "name": "@binz/visor",
+  "version": "0.1.0-beta.0",
+  "description": "Full-coverage `<head>` gear for your Astro app.",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
+    "build": "astro build",
     "lint": "eslint",
     "format": "format"
   },
@@ -22,7 +17,7 @@
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
-    "@lab/eslint-config": "workspace:*",
-    "@lab/typescript-config": "workspace:*"
+    "@binz/eslint": "*",
+    "@binz/tsconfig": "*"
   }
 }
