--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@binz/visor",
-  "version": "0.1.0-beta.0",
+  "version": "0.1.1",
   "description": "Full-coverage `<head>` gear for your Astro app.",
   "license": "MIT",
   "publishConfig": {
