--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/node": "^20.11.24",
     "astro": "^4.7.0",
+    "sharp": "^0.33.5",
+    "sharp-ico": "^0.1.5",
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
