--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "@types/node": "^20.17.0"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.9"
   }
 }
