feat: add example site

--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,11 @@
     },
     "lint": {
       "outputs": []
+    },
+    "dev": {
+      "dependsOn": ["^build"],
+      "cache": false,
+      "persistent": true
     }
   }
 }
