--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {},
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "build": "turbo run build",
+    "ci:publish": "turbo run build && changeset publish"
+  },
   "dependencies": {
     "@types/node": "^20.17.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9"
-  }
+  },
+  "engines": {
+    "node": ">=22",
+    "pnpm": ">=9.0.5",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
+  "packageManager": "pnpm@9.0.5"
 }
