--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/node": "^20.17.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.9"
+    "@changesets/cli": "^2.27.9",
+    "turbo": "^1.13.3"
   },
   "engines": {
     "node": ">=22",
