--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^4.16.7",
     "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@binz/visor": "workspace:*"
   }
 }
