--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "astro": "^4.16.7",
     "@astrojs/check": "^0.9.4",
+    "sharp": "^0.33.5",
+    "sharp-ico": "^0.1.5",
     "typescript": "^5.6.3",
     "@binz/visor": "workspace:*"
   }
