--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -11,11 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.7",
     "@astrojs/check": "^0.9.4",
+    "@binz/visor": "workspace:*",
+    "astro": "^4.16.7",
+    "astrojs-service-worker": "^2.0.0",
     "sharp": "^0.33.5",
     "sharp-ico": "^0.1.5",
-    "typescript": "^5.6.3",
-    "@binz/visor": "workspace:*"
+    "typescript": "^5.6.3"
   }
 }
