--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,11 @@
       "dependsOn": ["^build"],
       "cache": false,
       "persistent": true
+    },
+    "preview": {
+      "dependsOn": ["^build"],
+      "cache": false,
+      "persistent": true
     }
   }
 }
